# polymorpheo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  aligned_region_transforms.json  bridge_contours.py  contours2mesh.py  contours2mesh_script.py  contours2mesh_script0.py  contours2mesh_test.py  energy.py  main.py  main_real.py  micro2mri.py  micro2mri_script.py  micro2mri_script.textClipping  opts_quad.npy  output.ply  output.stl  output.vtk  phantomSlices.py  pyproject.toml  register.py  test.ply  test_branch.py  transfo.py  utils.py
contours2mesh/: __init__.py  core.py  energy.py  io.py  register.py  transfo.py  utils.py
output/: banana_simplepolylines_rig_met-3.pkl  mesh_Y.vtp  mesh_dwich-aff-0.vtp  mesh_dwich-aff-10.vtp  mesh_dwich-aff-50.vtp  mesh_dwich-aff-99.vtp  mesh_dwich-aff_3.vtp  mesh_dwich-quad.vtp  mesh_dwich-quad_3.vtp  mesh_dwich-quad_3_ref.vtp  mesh_dwich-quad_3_smooth.vtp  mesh_raw.vtp  mesh_raw_3.vtp  mesh_rig.vtp  mesh_rig_3.vtp  mesh_rto.vtp  mesh_test.vtp
output/polylines copy/: banana_simple_polylines_aff_met-0.pkl  banana_simple_polylines_aff_met-3.pkl  banana_simple_polylines_aff_met-5.pkl  banana_simple_polylines_defo_met-2-1.pkl  banana_simple_polylines_defo_met-3-1.pkl  banana_simple_polylines_defo_met-3-5.pkl  banana_simple_polylines_defo_met-4-5.pkl  banana_simple_polylines_defo_met-5-5.pkl  banana_simple_polylines_quad_met-0.pkl  banana_simple_polylines_quad_met-3.pkl  banana_simple_polylines_rig_met-0.pkl  (+62 more)
polymorpheo/: __init__.py  core.py  energy.py  io.py  log.py  plots.py  register.py  transfo.py  utils.py
preproc_mri/: preprocs.py
samples/: io.py
scripts/: align_slices.py  apply_serial_transfo.py  micro2mri.py  micro2mri_old.py  npz_registration.py  toy_registration.py
tests/: test_io.py
(+99 files in other folders)
